--- a/util-service/src/main/resources/HTMLTemplates/added-to-project.html
+++ b/util-service/src/main/resources/HTMLTemplates/added-to-project.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Thư Mời Tham Gia</title>
+    <title>Thông Báo Thêm Vào Dự Án</title>
     <!-- Material-UI CDN -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
     <link rel="stylesheet" href="https://unpkg.com/@mui/material@latest/dist/mui.min.css">
@@ -43,7 +42,7 @@
             color: #424242;
             margin: 8px 0;
         }
-        .invite-link {
+        .project-link {
             display: inline-block;
             font-size: 16px;
             font-weight: 500;
@@ -55,7 +54,7 @@
             margin: 16px 0;
             transition: background 0.3s;
         }
-        .invite-link:hover {
+        .project-link:hover {
             background: #1565c0;
         }
         .footer {
@@ -68,10 +67,13 @@
 <body>
 <div class="container">
     <img src="https://res.cloudinary.com/dt2tfpjrm/image/upload/v1745656279/workwerp_v1/images/tjkbkemhpuvrshhbgsmm.png" alt="Logo WORK.ERP" class="logo">
-    <div class="header">Thư Mời Tham Gia</div>
-    <p class="body-text">Kính gửi {{userFullName}},</p>
-    <p class="body-text">Bạn đã được mời tham gia <strong>WORK.ERP</strong> trên nền tảng của chúng tôi. Vui lòng nhấp vào liên kết dưới đây để chấp nhận lời mời:</p>
-    <a href="{{verifyUrl}}" class="invite-link">Chấp Nhận Lời Mời</a>
+    <div class="header">Chào Mừng Tham Gia Dự Án Mới</div>
+    <p class="body-text">Kính gửi {{member_name}},</p>
+    <p class="body-text">Bạn đã được thêm vào dự án <strong>{{project_name}}</strong> trên nền tảng WORK.ERP.</p>
+    <p class="body-text">Vui lòng nhấp vào liên kết dưới đây để truy cập dự án:</p>
+    <a href="{{project_url}}" class="project-link">Xem Dự Án</a>
+    <p class="body-text">Chúng tôi rất mong được hợp tác cùng bạn trong dự án này.</p>
+    <p class="body-text">Trân trọng,<br>Đội ngũ WORK.ERP</p>
     <div class="footer">© 2025 WORK.ERP. Mọi quyền được bảo lưu.</div>
 </div>
 </body>
