--- a/util-service/src/main/resources/HTMLTemplates/forget-password.html
+++ b/util-service/src/main/resources/HTMLTemplates/forget-password.html
@@ -1,56 +1,74 @@
 <!DOCTYPE html>
-<html>
+<html lang="vi">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Reset Your Password</title>
+  <title>Đặt Lại Mật Khẩu</title>
+  <!-- Material-UI CDN -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+  <link rel="stylesheet" href="https://unpkg.com/@mui/material@latest/dist/mui.min.css">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f4;
+      font-family: 'Roboto', Arial, sans-serif;
+      background-color: #f5f5f5;
       margin: 0;
       padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
     .container {
       max-width: 600px;
-      margin: 20px auto;
+      margin: 20px;
       background: #ffffff;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 24px;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       text-align: center;
     }
+    .logo {
+      max-width: 400px;
+      margin-bottom: 16px;
+    }
     .header {
-      font-size: 24px;
-      font-weight: bold;
-      color: #333;
+      font-size: 20px;
+      font-weight: 500;
+      color: #121212;
+      margin-bottom: 16px;
     }
     .code-box {
-      font-size: 22px;
-      font-weight: bold;
-      color: #fff;
-      background: #007BFF;
-      padding: 10px 20px;
+      font-size: 24px;
+      font-weight: 500;
+      color: #ffffff;
+      background: #1976d2;
+      padding: 12px 24px;
       display: inline-block;
-      border-radius: 5px;
-      margin: 20px 0;
+      border-radius: 4px;
+      margin: 16px 0;
+      letter-spacing: 2px;
+    }
+    .body-text {
+      font-size: 16px;
+      color: #424242;
+      margin: 8px 0;
     }
     .footer {
       font-size: 14px;
-      color: #777;
-      margin-top: 20px;
+      color: #757575;
+      margin-top: 24px;
     }
   </style>
 </head>
 <body>
 <div class="container">
-  <div class="header">Reset Your Password</div>
-  <p>Hello,</p>
-  <p>You requested a password reset. Use the code below to reset your password:</p>
+  <img src="https://res.cloudinary.com/dt2tfpjrm/image/upload/v1745656279/workwerp_v1/images/tjkbkemhpuvrshhbgsmm.png" alt="Logo WORK.ERP" class="logo">
+  <div class="header">Đặt Lại Mật Khẩu</div>
+  <p class="body-text">Xin chào,</p>
+  <p class="body-text">Bạn đã yêu cầu đặt lại mật khẩu. Vui lòng sử dụng mã dưới đây để đặt lại mật khẩu:</p>
   <div class="code-box">{{code}}</div>
-  <p>If you did not request this, please ignore this email.</p>
-  <div class="footer">&copy; 2025 Your Company. All rights reserved.</div>
+  <p class="body-text">Nếu bạn không thực hiện yêu cầu này, vui lòng bỏ qua email này.</p>
+  <div class="footer">© 2025 WORK.ERP. Mọi quyền được bảo lưu.</div>
 </div>
 </body>
 </html>
-
